qualities padding, scroll overflow on column error fixed, qualities icon line height adjusted

--- a/src/public/packages/savanna-theme/sass/src/toolbar/Toolbar.scss
+++ b/src/public/packages/savanna-theme/sass/src/toolbar/Toolbar.scss
@@ -71,10 +71,13 @@
 );
 
 .#{$prefix}toolbar-thetus-toolbar {
-  border-bottom: solid 1px #999999;
-  border-top: solid 1px #999999;
-  padding-left: 8px;
-  padding-right: 8px;
+  .#{$prefix}box-inner{
+    border-bottom: solid 1px #999999;
+    border-top: solid 1px #999999;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
 }
 
 @include extjs-toolbar-ui(
